--- a/.config
+++ b/.config
@@ -52,8 +52,8 @@ CONFIG_PACKAGE_luci-app-unblockmusic=n
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 # 第三方软件包:
-CONFIG_PACKAGE_luci-app-mentohust=y
-CONFIG_PACKAGE_mentohust=y
+#CONFIG_PACKAGE_luci-app-mentohust=y
+#CONFIG_PACKAGE_mentohust=y
 # LuCI主题:
 CONFIG_PACKAGE_luci-theme-argon=y
 # 常用软件包:
